# csa_task_1

./: README.md
outs/: out_10_1.txt  out_10_2.txt  out_11_1.txt  out_11_2.txt  out_1_1.txt  out_1_2.txt  out_2_1.txt  out_2_2.txt  out_3_1.txt  out_3_2.txt  out_4_1.txt  out_4_2.txt  out_5_1.txt  out_5_2.txt  out_6_1.txt  out_6_2.txt  out_7_1.txt  out_7_2.txt  out_8_1.txt  out_8_2.txt  out_9_1.txt  out_9_2.txt
src/Task - 1/: CMakeLists.txt  main.cpp
src/Task - 1/container/: container.cpp  container.h
src/Task - 1/functions/: streamManage.h  tryParse.h
src/Task - 1/matrix/: diagonal.cpp  diagonal.h  lTriangle.cpp  lTriangle.h  matrix.cpp  matrix.h  square.cpp  square.h
task/: ~$дание - 1.docx
